--- a/templates/Ishmael.html
+++ b/templates/Ishmael.html
@@ -1,35 +1,31 @@
 <!-- Sinner Card!!! -->
 <div class="col-md-4">
   <div class="card text-center">
-    <img src="/static/Sinclair.png" class="card-img-top" alt="Trainer 3" />
+    <img src="/static/Ishmaelfull.jpg" class="card-img-top" alt="Trainer 3" />
     <div class="card-body">
-      <h5 class="card-title">Sinclair</h5>
-      <p class="card-text">
-        Als ich aus unruhigen Träumen erwachte, hatte ich mich in ein ungeheures
-        Ungeziefer verwandelt.<br />As I awoke from unsettling dreams, I had
-        transformed into some hideous pest.
-      </p>
+      <h5 class="card-title">Ishmael</h5>
+      <p class="card-text">If you please, call me Ishmael.</p>
       <button
         type="button"
         class="btn btn-primary"
         data-bs-toggle="modal"
-        data-bs-target="#SinclairModal"
+        data-bs-target="#IshmaelModal"
       >
         Read more
       </button>
       <!-- Modal -->
       <div
         class="modal fade"
-        id="SinclairModal"
+        id="IshmaelModal"
         tabindex="-1"
-        aria-labelledby="SinclairModal"
+        aria-labelledby="IshmaelModal"
         data-bs-backdrop="static"
         aria-hidden="true"
       >
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="SinclairModal">Sinclair</h1>
+              <h1 class="modal-title fs-5" id="IshmaelModal">Ishmael</h1>
               <button
                 type="button"
                 class="btn-close"
