--- a/templates/Meursalt.html
+++ b/templates/Meursalt.html
@@ -1,7 +1,7 @@
 <!-- Sinner Card!!! -->
 <div class="col-md-4">
     <div class="card text-center">
-        <img src="/static/Meursalt.png" class="card-img-top" alt="Trainer 3">
+        <img src="/static/Meursaultfull.jpg" class="card-img-top" alt="Trainer 3">
         <div class="card-body">
             <h5 class="card-title">
                 Meursalt
