--- a/templates/not-yet.html
+++ b/templates/not-yet.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-{% block title %}This doesn't exist yet{% endblock %}
-
+{% extends "base.html" %} {% block title %}This doesn't exist yet{% endblock %}
 {% block content %}
 
 <h2>Oops, this isn't finished yet</h2>
