--- a/templates/Gregor.html
+++ b/templates/Gregor.html
@@ -1,9 +1,9 @@
 <!-- Sinner Card!!! -->
 <div class="col-md-4">
   <div class="card text-center">
-    <img src="/static/Sinclair.png" class="card-img-top" alt="Trainer 3" />
+    <img src="/static/Gregorfull.jpg" class="card-img-top" alt="Trainer 3" />
     <div class="card-body">
-      <h5 class="card-title">Sinclair</h5>
+      <h5 class="card-title">Gregor</h5>
       <p class="card-text">
         Als ich aus unruhigen Träumen erwachte, hatte ich mich in ein ungeheures
         Ungeziefer verwandelt.<br />As I awoke from unsettling dreams, I had
@@ -13,23 +13,23 @@
         type="button"
         class="btn btn-primary"
         data-bs-toggle="modal"
-        data-bs-target="#SinclairModal"
+        data-bs-target="#GregorModal"
       >
         Read more
       </button>
       <!-- Modal -->
       <div
         class="modal fade"
-        id="SinclairModal"
+        id="GregorModal"
         tabindex="-1"
-        aria-labelledby="SinclairModal"
+        aria-labelledby="GregorModal"
         data-bs-backdrop="static"
         aria-hidden="true"
       >
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="SinclairModal">Sinclair</h1>
+              <h1 class="modal-title fs-5" id="GregorModal">Gregor</h1>
               <button
                 type="button"
                 class="btn-close"
@@ -38,15 +38,16 @@
               ></button>
             </div>
             <div class="modal-body" style="text-align: left">
-              You may be disheartened by the defective state of many of your
-              Sinners, but do not worry; this Sinner is one of the few who can
-              carry out most missions without much complaint. She is likely to
-              make reasonable judgements, so it is a good idea to start
-              conversations while looking her way if you're seeking sound
-              advice. However, you mustn't forget: this Sinner has survived an
-              absurd voyage in a far and wide body of water. Her patience may
-              run deep, but once you take a wrong turn with her, it will be a
-              difficult task to regain her trust.
+              This Sinner is relatively easy to handle in terms of personality.
+              However, an upsurge of emotion or a sudden change of environment
+              may cause parts or the whole of his body to transform into
+              insectile (notably akin to a carapace, resembling that of the
+              _________) tissues. If you do not wish to be a rude manager (not
+              that you're obligated to be nice), we recommend keeping your
+              facial expression in check so that your disgust is not visible to
+              him. He sometimes uses cynical language, but he can still be
+              reasoned with, and you can get around him without much difficulty
+              as long as you learn the knack of it.
             </div>
             <div class="modal-footer">
               <button
