--- a/templates/Sinclair.html
+++ b/templates/Sinclair.html
@@ -1,13 +1,12 @@
 <!-- Sinner Card!!! -->
 <div class="col-md-4">
   <div class="card text-center">
-    <img src="/static/Sinclair.png" class="card-img-top" alt="Trainer 3" />
+    <img src="/static/Sinclairfull.jpg" class="card-img-top" alt="Trainer 3" />
     <div class="card-body">
       <h5 class="card-title">Sinclair</h5>
       <p class="card-text">
-        Als ich aus unruhigen Träumen erwachte, hatte ich mich in ein ungeheures
-        Ungeziefer verwandelt.<br />As I awoke from unsettling dreams, I had
-        transformed into some hideous pest.
+        Die böse Welt indessen begann schon mitten in unserem eigenen Hause<br />Meanwhile,
+        the world of evil began there already, right in the middle of our house.
       </p>
       <button
         type="button"
@@ -38,15 +37,17 @@
               ></button>
             </div>
             <div class="modal-body" style="text-align: left">
-              You may be disheartened by the defective state of many of your
-              Sinners, but do not worry; this Sinner is one of the few who can
-              carry out most missions without much complaint. She is likely to
-              make reasonable judgements, so it is a good idea to start
-              conversations while looking her way if you're seeking sound
-              advice. However, you mustn't forget: this Sinner has survived an
-              absurd voyage in a far and wide body of water. Her patience may
-              run deep, but once you take a wrong turn with her, it will be a
-              difficult task to regain her trust.
+              Even with the volatile nature of human growth around his age taken
+              into consideration, this Sinner seems to get particularly startled
+              or frown when spoken to. He isn't used to real combat at the
+              moment, meaning that he may struggle to keep himself together at
+              the sight of something as mild as spilt innards at first. As there
+              may be those with violent tendencies among your crew, we recommend
+              taking an approach focused on positive reinforcement with this
+              Sinner. He appears to possess a murderous gaze that he himself
+              isn't aware of; this is a hopeful sign that he has the potential
+              to grow into an expert of our company's profession with the right
+              stimuli.
             </div>
             <div class="modal-footer">
               <button
