--- a/templates/gnarpy.html
+++ b/templates/gnarpy.html
@@ -1,39 +1,33 @@
 <html>
-
-<head>
-    <title>
-        The Title
-    </title>
+  <head>
+    <title>The Title</title>
     <script>
-        function Gnarpy() {
-            var MyName = '<img src="static/Gnarpy.gif" alt="Aftonsparv" width="400" height="400">'
-            document.getElementById('Gnarpy').innerHTML = MyName;
-        }
-        function gnarpy() {
-            var MyName = '<img src="static/gnarpy.jpg" alt="Aftonsparv" width="400" height="400">'
-            document.getElementById('gnarpy').innerHTML = MyName;
-        }
+      function Gnarpy() {
+        var MyName =
+          '<img src="static/Gnarpy.gif" alt="Aftonsparv" width="400" height="400">';
+        document.getElementById("Gnarpy").innerHTML = MyName;
+      }
+      function gnarpy() {
+        var MyName =
+          '<img src="static/gnarpy.jpg" alt="Aftonsparv" width="400" height="400">';
+        document.getElementById("gnarpy").innerHTML = MyName;
+      }
     </script>
-</head>
+  </head>
 
-<body>
-    <h1>
-        This is my first Aftonsparv
-    </h1>
+  <body>
+    <h1>This is my first Aftonsparv</h1>
     This is where the text of the document would be.
-    <input id="a">
-    <input id="b">
+    <input id="a" />
+    <input id="b" />
     <p>
-        <button type="button" onclick="Gnarpy()">
-            Click me to spawn Gnarpy
-        </button>
+      <button type="button" onclick="Gnarpy()">Click me to spawn Gnarpy</button>
 
-        <button type="button" onclick="gnarpy()">
-            Click me to spawn Aftonsparv
-        </button>
+      <button type="button" onclick="gnarpy()">
+        Click me to spawn Aftonsparv
+      </button>
     </p>
     <p id="Gnarpy"></p>
     <p id="gnarpy"></p>
-</body>
-
+  </body>
 </html>
