--- a/templates/login.html
+++ b/templates/login.html
@@ -1,53 +1,68 @@
 <!-- login.html -->
-{% extends "base.html" %}
-{% block title %}Login{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
+%}
 <style>
-    form {
-        min-width: 400px;
-        position: absolute;
-        text-align: center;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 1.5rem
-    }
-    h1 {
-        position: absolute;
-        left: 0%;
-        width: 100vw;
-        text-align: center;
-    }
+  form {
+    min-width: 400px;
+    position: absolute;
+    text-align: center;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.5rem;
+  }
+  h1 {
+    position: absolute;
+    left: 0%;
+    width: 100vw;
+    text-align: center;
+  }
 
-    .form-box {
-        top: 40%;
-        left: 50%;
-        border-color: #1f25a5 solid;
-    }
+  .form-box {
+    top: 40%;
+    left: 50%;
+    border-color: #1f25a5 solid;
+  }
 </style>
 <h1>Login to Your Account</h1>
 <div class="form-box">
-    <form method="POST" action="{{ url_for('login') }}">
-        <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input type="text" class="form-control" id="username" name="username" required>
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password" required>
-        </div>
-        <button type="submit" class="btn btn-primary" style="background-color:#1f25a5; border-color:#1f25a5">Login</button>
-        <br><a href="/register" style="font-size:medium;">Need an account? Register here</a>
-    </form>
+  <form method="POST" action="{{ url_for('login') }}">
+    <div class="mb-3">
+      <label for="username" class="form-label">Username</label>
+      <input
+        type="text"
+        class="form-control"
+        id="username"
+        name="username"
+        required
+      />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        name="password"
+        required
+      />
+    </div>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      style="background-color: #1f25a5; border-color: #1f25a5"
+    >
+      Login
+    </button>
+    <br /><a href="/register" style="font-size: medium"
+      >Need an account? Register here</a
+    >
+  </form>
 </div>
 {% if form.errors %}
 <div class="alert alert-danger mt-3">
-    {% for field, errors in form.errors.items() %}
-    {% for error in errors %}
-    <p>{{ error }}</p>
-    {% endfor %}
-    {% endfor %}
+  {% for field, errors in form.errors.items() %} {% for error in errors %}
+  <p>{{ error }}</p>
+  {% endfor %} {% endfor %}
 </div>
-{% endif %}
-{% endblock %}
+{% endif %} {% endblock %}
