--- a/templates/user.html
+++ b/templates/user.html
@@ -1,10 +1,8 @@
-{% extends "base.html" %}
-{% block title %}User Profile{% endblock %}
+{% extends "base.html" %} {% block title %}User Profile{% endblock %} {% block
+content %}
 
-{% block content %}
-
-    <h1>User Profile</h1>
-    <p><strong>Name:</strong> {{ name }}</p>
-    <p><strong>Email:</strong> {{ email }}</p>
+<h1>User Profile</h1>
+<p><strong>Name:</strong> {{ name }}</p>
+<p><strong>Email:</strong> {{ email }}</p>
 
 {% endblock %}
