--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,26 +1,42 @@
-{% extends "base.html" %} {% block title %}Contact Us{% endblock %} {% block
-content %}
+{% extends "base.html" %} {% block title %}Contact Us{% endblock %} {% block content %}
+
+<style>
+  .form-container {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 50px;
+    background-color: #a6abf3;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 100px;
+  }
+h1 {
+      position: absolute;
+      left: 0%;
+      width: 100vw;
+      text-align: center;
+      margin-top: 1rem;
+  }
+</style>
 
 <h1>Contact Us</h1>
-<form method="POST" action="{{ url_for('contact') }}">
-  <div class="mb-3">
-    <label for="name" class="form-label">Name</label>
-    <input type="text" class="form-control" id="name" name="name" required />
-  </div>
-  <div class="mb-3">
-    <label for="email" class="form-label">Email</label>
-    <input type="email" class="form-control" id="email" name="email" required />
-  </div>
-  <div class="mb-3">
-    <label for="message" class="form-label">Message</label>
-    <textarea
-      class="form-control"
-      id="message"
-      name="message"
-      rows="3"
-      required
-    ></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary">Send Feedback</button>
-</form>
+<div class="form-container">
+  <form method="POST" action="{{ url_for('contact') }}">
+    <div class="mb-3">
+      <label for="name" class="form-label">Name</label>
+      <input type="text" class="form-control short-input" id="name" name="name" required />
+    </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" class="form-control short-input" id="email" name="email" required />
+    </div>
+    <div class="mb-3">
+      <label for="message" class="form-label">Message</label>
+      <textarea class="form-control short-input" id="message" name="message" rows="3" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Send Feedback</button>
+  </form>
+</div>
 {% endblock %}
